cmake_minimum_required(VERSION 3.15)
project(foonathan_memory)

set(CMAKE_INSTALL_PREFIX "/opt/fastdds")
set(CPACK_PACKAGING_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
set(BUILD_SHARED_LIBS ON)
set(FOONATHAN_MEMORY_BUILD_EXAMPLES OFF)
set(FOONATHAN_MEMORY_BUILD_TESTS OFF)

add_subdirectory(memory)

include(InstallRequiredSystemLibraries)

if(NOT DEFINED CPACK_PACKAGE_VERSION)
    set(CPACK_PACKAGE_VERSION ${FOONATHAN_MEMORY_VERSION})
endif()

if(DEFINED CPACK_DEBIAN_PACKAGE_REVISION)
    set(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION}-${CPACK_DEBIAN_PACKAGE_REVISION}")
endif()

message(STATUS "CPACK_PACKAGE_VERSION = ${CPACK_PACKAGE_VERSION}")
message(STATUS "CPACK_DEBIAN_PACKAGE_ARCHITECTURE = ${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")

set(CPACK_PACKAGE_NAME "foonathan-memory")
set(CPACK_PACKAGE_CONTACT "you@example.com")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6")
set(CPACK_GENERATOR "DEB")
include(CPack)

