cmake_minimum_required(VERSION 3.15)
project(foonathan_memory)

if (NOT DEFINED CMAKE_INSTALL_PREFIX)
    set(CMAKE_INSTALL_PREFIX "/opt/fastdds")
endif()

if (NOT DEFINED CPACK_PACKAGING_INSTALL_PREFIX)
    set(CPACK_PACKAGING_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
endif()

if (NOT DEFINED BUILD_SHARED_LIBS)
    set(BUILD_SHARED_LIBS ON)
endif()

if (NOT DEFINED FOONATHAN_MEMORY_BUILD_EXAMPLES)
    set(FOONATHAN_MEMORY_BUILD_EXAMPLES OFF)
endif()

if (NOT DEFINED FOONATHAN_MEMORY_BUILD_TESTS)
    set(FOONATHAN_MEMORY_BUILD_TESTS OFF)
endif()

add_subdirectory(memory)

include(InstallRequiredSystemLibraries)

if(NOT DEFINED CPACK_PACKAGE_VERSION)
    set(CPACK_PACKAGE_VERSION ${FOONATHAN_MEMORY_VERSION})
endif()

if(DEFINED CPACK_DEBIAN_PACKAGE_REVISION)
    set(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION}-${CPACK_DEBIAN_PACKAGE_REVISION}")
endif()

set(CPACK_PACKAGE_NAME "foonathan-memory")
set(CPACK_PACKAGE_CONTACT "you@example.com")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6")
set(CPACK_GENERATOR "DEB")

set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${CPACK_PACKAGE_VERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")

include(CPack)

